구조 개편, rolling 기능 강화, panel크기 변경, news stand거 몇 개 가져옴

--- a/main.html
+++ b/main.html
@@ -39,33 +39,98 @@
 				<li class="ctgry_li"><a href="">지역</a></li>
 			</ul>
 		</div>
-
-		<div id="contents">
-			<div id="left" class="panel">
-				<div class="in_panel">
-					<h1>Left Panel</h1>
+		
+		<div id="panels">
+			<div id="left" class="panelWrapper">
+				<div class="panel">
+					<div class="panelContents">
+						<h3>
+							<a href="http://www.ddaily.co.kr/"
+								target="_blank">
+								<img
+									src="http://static.naver.net/newsstand/
+										up/2013/0813/nsd114654225.gif"
+									width="260" height="55"
+									alt="디지털데일리">
+							</a>
+						</h3>
+						<iframe
+							src="http://newsstand.naver.com/include/page/
+								138.html"
+							width="840"
+							height="380"
+							frameborder="0"
+							scrolling="no"
+							class="ifr_arc"
+							allowtransparency="true"
+							title="디지털데일리 주요뉴스">
+						</iframe>
+					</div>
 				</div>
 			</div>
 			
-			<div id="center" class="panel">
-				<div class="in_panel">
-					<h1>Center Panel</h1>
+			<div id="center" class="panelWrapper">
+				<div class="panel">
+					<div class="panelContents">
+						<h3>
+							<a href="http://www.bloter.net/"
+								target="_blank">
+								<img src="http://static.naver.net/
+									newsstand/up/2013/0813/nsd114723490.gif"
+								width="260" height="55" 
+								alt="블로터닷넷">
+							</a>
+						</h3>	
+						<iframe
+							src="http://newsstand.naver.com/include/page/
+								293.html"
+							width="840"
+							height="380"
+							frameborder="0"
+							scrolling="no"
+							class="ifr_arc"
+							allowtransparency="true"
+							title="파이낸셜뉴스 주요뉴스">
+						</iframe>	
+					</div>
 				</div>
 			</div>
 			
-			<div id="right" class="panel">
-				<div class="in_panel">
-					<h1>Right Panel</h1>
+			<div id="right" class="panelWrapper">
+				<div class="panel">
+					<div class="panelContents">
+						<h3>
+							<a href="http://www.zdnet.co.kr/"
+							target="_blank">
+								<img
+									src="http://static.naver.net/newsstand/
+										up/2013/0813/nsd11491303.gif"
+									width="260" height="55"
+									alt="지디넷코리아">
+							</a>
+						</h3>
+						<iframe
+							src="http://newsstand.naver.com/include/page/
+								092.html"
+							width="840"
+							height="380"
+							frameborder="0"
+							scrolling="no"
+							class="ifr_arc"
+							allowtransparency="true"
+							title="지디넷코리아 주요뉴스">
+						</iframe>
+					</div>
 				</div>
 			</div>
 		</div>
 
-		<div id="panel_button">
-			<a id="to_left" href="#">
-				<img src="./img/to_left.png" />
+		<div id="panelButton">
+			<a id="toLeft" data-pbstatus="wait" href="#">
+				<p>왼쪽 신문</p>
 			</a>
-			<a id="to_right" href="#">
-				<img src="./img/to_right.png" />
+			<a id="toRight" data-pbstatus="wait" href="#">
+				<p>오른쪽 신문</p>
 			</a>
 		</div>
 	</div>
