--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 	<link rel="stylesheet" type="text/css" href="./reset.css" />
 	<link rel="stylesheet" type="text/css" href="./main.css" />
 	<script src="./main.js"></script>
+<!--
+	<script src="./test.js"></script>
+-->
 
 </head>
 
@@ -90,7 +93,7 @@
 							scrolling="no"
 							class="ifr_arc"
 							allowtransparency="true"
-							title="파이낸셜뉴스 주요뉴스">
+							title="블로터닷넷 주요뉴스">
 						</iframe>	
 					</div>
 				</div>
@@ -101,7 +104,7 @@
 					<div class="panelContents">
 						<h3>
 							<a href="http://www.zdnet.co.kr/"
-							target="_blank">
+								target="_blank">
 								<img
 									src="http://static.naver.net/newsstand/
 										up/2013/0813/nsd11491303.gif"
