--- a/main.html
+++ b/main.html
@@ -3,14 +3,12 @@
 <html>
 
 <head>
-	<meta charset="utf8" />
+	<meta charset="utf-8" />
 	<title>NEWS STAND</title>
-	<link rel="stylesheet" type="text/css" href="./reset.css" />
-	<link rel="stylesheet" type="text/css" href="./main.css" />
-	<script src="./main.js"></script>
-<!--
-	<script src="./test.js"></script>
--->
+	<link rel="stylesheet" type="text/css" href="./style/reset.css" />
+	<link rel="stylesheet" type="text/css" href="./style/main.css" />
+	<script src="./script/underscore.js"></script>
+	<script src="./script/main.js"></script>
 
 </head>
 
@@ -46,84 +44,19 @@
 		<div id="panels">
 			<div id="left" class="panelWrapper">
 				<div class="panel">
-					<div class="panelContents">
-						<h3>
-							<a href="http://www.ddaily.co.kr/"
-								target="_blank">
-								<img
-									src="http://static.naver.net/newsstand/
-										up/2013/0813/nsd114654225.gif"
-									width="260" height="55"
-									alt="디지털데일리">
-							</a>
-						</h3>
-						<iframe
-							src="http://newsstand.naver.com/include/page/
-								138.html"
-							width="840"
-							height="380"
-							frameborder="0"
-							scrolling="no"
-							class="ifr_arc"
-							allowtransparency="true"
-							title="디지털데일리 주요뉴스">
-						</iframe>
-					</div>
+					<div class="panelContents"></div>
 				</div>
 			</div>
 			
 			<div id="center" class="panelWrapper">
 				<div class="panel">
-					<div class="panelContents">
-						<h3>
-							<a href="http://www.bloter.net/"
-								target="_blank">
-								<img src="http://static.naver.net/
-									newsstand/up/2013/0813/nsd114723490.gif"
-								width="260" height="55" 
-								alt="블로터닷넷">
-							</a>
-						</h3>	
-						<iframe
-							src="http://newsstand.naver.com/include/page/
-								293.html"
-							width="840"
-							height="380"
-							frameborder="0"
-							scrolling="no"
-							class="ifr_arc"
-							allowtransparency="true"
-							title="블로터닷넷 주요뉴스">
-						</iframe>	
-					</div>
+					<div class="panelContents"></div>
 				</div>
 			</div>
 			
 			<div id="right" class="panelWrapper">
 				<div class="panel">
-					<div class="panelContents">
-						<h3>
-							<a href="http://www.zdnet.co.kr/"
-								target="_blank">
-								<img
-									src="http://static.naver.net/newsstand/
-										up/2013/0813/nsd11491303.gif"
-									width="260" height="55"
-									alt="지디넷코리아">
-							</a>
-						</h3>
-						<iframe
-							src="http://newsstand.naver.com/include/page/
-								092.html"
-							width="840"
-							height="380"
-							frameborder="0"
-							scrolling="no"
-							class="ifr_arc"
-							allowtransparency="true"
-							title="지디넷코리아 주요뉴스">
-						</iframe>
-					</div>
+					<div class="panelContents"></div>
 				</div>
 			</div>
 		</div>
@@ -141,31 +74,6 @@
 	<div id="footer">
 		<div id="press">
 			<ul>
-				<li>
-					<a href="">
-						<img src="./img/press/nsd14948476.gif" />
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="./img/press/nsd111948440.gif" />
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="./img/press/nsd162737318.gif" />
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="./img/press/nsd185116392.gif" />
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="./img/press/nsd16500796.gif" />
-					</a>
-				</li>
 			</ul>
 		<!--
 			<a href="">이전 언론사 목록</a>
