--- a/main.html
+++ b/main.html
@@ -42,30 +42,18 @@
 		</div>
 		
 		<div id="panels">
-			<div id="left" class="panelWrapper">
-				<div class="panel">
-					<div class="panelContents"></div>
-				</div>
-			</div>
-			
-			<div id="center" class="panelWrapper">
-				<div class="panel">
-					<div class="panelContents"></div>
-				</div>
-			</div>
-			
-			<div id="right" class="panelWrapper">
-				<div class="panel">
-					<div class="panelContents"></div>
-				</div>
-			</div>
+			<div id="pw0" class="panelWrapper"></div>
+			<div id="pw1" class="panelWrapper"></div>
+			<div id="pw2" class="panelWrapper"></div>
+			<div id="pw3" class="panelWrapper"></div>
+			<div id="pw4" class="panelWrapper"></div>
 		</div>
 
 		<div id="panelButton">
-			<a id="toLeft" data-pbstatus="wait" href="#">
+			<a id="toLeft" href="#">
 				<p>왼쪽 신문</p>
 			</a>
-			<a id="toRight" data-pbstatus="wait" href="#">
+			<a id="toRight" href="#">
 				<p>오른쪽 신문</p>
 			</a>
 		</div>
