make infinite rolling, thumbnail

--- a/main.html
+++ b/main.html
@@ -19,11 +19,6 @@
 		<h1>NEWS STAND</h1>
 		<p>알파테스트</p>
 	
-	<!--	
-		<a href="">MY뉴스</a>
-		<a href="">전체언론사</a>
-	-->
-
 		<a href="" id="login" class="button">로그인</a>
 	</div>
 
@@ -41,13 +36,7 @@
 			</ul>
 		</div>
 		
-		<div id="panels">
-			<div id="pw0" class="panelWrapper"></div>
-			<div id="pw1" class="panelWrapper"></div>
-			<div id="pw2" class="panelWrapper"></div>
-			<div id="pw3" class="panelWrapper"></div>
-			<div id="pw4" class="panelWrapper"></div>
-		</div>
+		<div id="panels"></div>
 
 		<div id="panelButton">
 			<a id="toLeft" href="#">
@@ -60,13 +49,8 @@
 	</div>
 
 	<div id="footer">
-		<div id="press">
-			<ul>
-			</ul>
-		<!--
-			<a href="">이전 언론사 목록</a>
-			<a href="">다음 언론사 목록</a>
-		-->
+		<div>
+			<div id="thumbnails"></div>
 		</div>
 	</div>
 </div>
