--- a/main.html
+++ b/main.html
@@ -38,14 +38,7 @@
 		
 		<div id="panels"></div>
 
-		<div id="panelButton">
-			<a id="toLeft" href="#">
-				<p>왼쪽 신문</p>
-			</a>
-			<a id="toRight" href="#">
-				<p>오른쪽 신문</p>
-			</a>
-		</div>
+		<div id="panelButton"></div>
 	</div>
 
 	<div id="footer">
